# onelap-strava-sync

./: .env.example  README.md  pyproject.toml  requirements-dev.txt  run_sync.py
.github/workflows/: main.yml
docs/: skills-mapping.md
docs/plans/: 2026-03-10-onelap-to-strava-design.md  2026-03-11-download-only-cli-implementation.md  2026-03-12-onelap-multi-fit-dedup-design.md  2026-03-15-onelap-auth-init-design.md
docs/reference/: onelap-adapter-notes.md
skills/onelap-strava-sync/: README.md  SKILL.md
skills/onelap-strava-sync/resources/: commands.md
src/sync_onelap_strava/: onelap_client.py  strava_client.py  sync_engine.py
tests/: test_cli.py  test_cli_download_only.py  test_config.py  test_e2e_dry_run.py  test_env_store.py  test_import_smoke.py  test_onelap_auth_init.py  test_onelap_client.py  test_onelap_download.py  test_onelap_http_login.py  test_skill_repository_structure.py  test_strava_oauth.py  test_strava_upload.py  test_sync_engine.py  test_sync_http_integration.py
